// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MemoAvatarComponent /> should render foreign memo 1`] = `
<Fragment>
  <CommentAvatar
    as="a"
    onClick={[Function]}
  />
</Fragment>
`;

exports[`<MemoAvatarComponent /> should render own memo 1`] = `
<Fragment>
  <CommentAvatar
    className="avatar"
  />
</Fragment>
`;

exports[`<MemoAvatarComponent /> should render without crashing 1`] = `
<Fragment>
  <CommentAvatar
    as="a"
    onClick={[Function]}
  />
</Fragment>
`;
